--- a/www/index.ejs
+++ b/www/index.ejs
@@ -72,7 +72,7 @@
   </style>
 </head>
 <body>
-<div id="splash" class="splash"><img class="splash-logo" src="/progressive-logo.jpg"></div>
+<div id="splash" class="splash"><img class="splash-logo" src="progressive-logo.jpg"></div>
 <div id="container"></div>
 <script src="<%= bundle %>"></script>
 </body>
