--- a/src/components/Content/CategoriesContent/ContentList.css
+++ b/src/components/Content/CategoriesContent/ContentList.css
@@ -1,5 +1,5 @@
-@import url('../Common/Helper.css');
-@import url('../Common/Colors.css');
+@import url('../../Common/Helper.css');
+@import url('../../Common/Colors.css');
 
 .list a {
   @mixin remove-a;
