--- a/src/modules/layout/components/HeaderNavigationBar.css
+++ b/src/modules/layout/components/HeaderNavigationBar.css
@@ -21,7 +21,12 @@
   text-transform: uppercase;
 }
 
-.navigation-item.active-navigation-item {
+.navigation-item.inactive-navigation-item {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.navigation-item.selected-navigation-item {
   font-weight: 700;
 }
 
