WEBAPP-157: Refactor locales.json and display correct tooltip

--- a/src/modules/layout/components/HeaderNavigationBar.css
+++ b/src/modules/layout/components/HeaderNavigationBar.css
@@ -23,6 +23,7 @@
 
 .navigation-item.inactive-navigation-item {
   opacity: 0.5;
+  cursor: default;
 }
 
 .navigation-item.selected-navigation-item {
