WEBAPP-157: Move cursor type to Header.css

--- a/src/modules/layout/components/Header.css
+++ b/src/modules/layout/components/Header.css
@@ -9,6 +9,7 @@
   align-items: center;
   box-shadow: 0 2px 5px -3px rgba(0, 0, 0, 0.2);
   background-color: var(--background-accent-color);
+  user-select: none;
 }
 
 .header > div {
